# freespace

./: .gitignore  CHEATSHEET.md  Cargo.toml  README.md
.planning/: Freespace_Full-PRD-Spec.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-volume-summary/: 02-01-PLAN.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-core-scan-engine/: 03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/06-cleanup-preview/: 06-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
freespace/: Cargo.toml
freespace/src/: cli.rs  main.rs
freespace/src/analyze/: mod.rs
freespace/src/classify/: mod.rs
freespace/src/commands/: caches.rs  categories.rs  clean.rs  doctor.rs  hidden.rs  largest.rs  mod.rs  scan.rs  summary.rs
freespace/src/config/: mod.rs
freespace/src/fs_scan/: mod.rs
freespace/src/output/: mod.rs
freespace/src/platform/: macos.rs
freespace/tests/: categories_cmd.rs  clean_apply_cmd.rs  clean_preview_cmd.rs  largest_cmd.rs  scan_cmd.rs  summary_cmd.rs
src/: cli.rs  main.rs
src/classify/: mod.rs
src/commands/: clean.rs  config_cmd.rs  doctor.rs  hidden.rs
src/config/: schema.rs
src/fs_scan/: mod.rs
src/output/: mod.rs
src/platform/: macos.rs
tests/: caches_cmd.rs  clean_apply_cmd.rs  doctor_cmd.rs  hidden_cmd.rs
(+38 files in other folders)
